# imagedecoder.raw

./: .gitignore  .travis.yml  CMakeLists.txt  FindJpeg.cmake  FindRAW.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/lcms2/: CMakeLists.txt  lcms2.sha256  lcms2.txt
depends/common/libjpeg-turbo/: 0001-fix-uwp-api.patch  0002-disable-executables.patch  0003-static.patch  CMakeLists.txt  flags.txt  libjpeg-turbo.sha256  libjpeg-turbo.txt
depends/common/libraw/: 0001-android-swab.patch  0001-fix-android-builds.patch  0001-narrowing.patch  0002-android-swab.patch  CMakeLists.txt  deps.txt  libraw.sha256  libraw.txt
depends/windows/lcms2/: 0001-c++17_deprecated.patch  0001-no-register-keyword.patch  lcms2.txt
depends/windows/libjpeg-turbo/: 0002-disable-executables.patch  0003-static.patch  flags.txt  libjpeg-turbo.sha256
depends/windows/libraw/: 0001-cmake-config.patch  0002-fix-uwp-api.patch  0003-fix-sdl-errors.patch  0004-c++17_deprecated.patch  0004-fix-sdl-errors-2.patch  CMakeLists.txt  libraw.sha256  libraw.txt
depends/windowsstore/lcms2/: CMakeLists.txt  lcms2.sha256
depends/windowsstore/libjpeg-turbo/: CMakeLists.txt
depends/windowsstore/libraw/: 0002-fix-uwp-api.patch  0003-fix-sdl-errors.patch  libraw.sha256  libraw.txt
imagedecoder.raw/: addon.xml.in
imagedecoder.raw/resources/language/resource.language.af_za/: strings.po
imagedecoder.raw/resources/language/resource.language.am_et/: strings.po
imagedecoder.raw/resources/language/resource.language.ar_sa/: strings.po
imagedecoder.raw/resources/language/resource.language.ast_es/: strings.po
imagedecoder.raw/resources/language/resource.language.az_az/: strings.po
imagedecoder.raw/resources/language/resource.language.be_by/: strings.po
imagedecoder.raw/resources/language/resource.language.bg_bg/: strings.po
imagedecoder.raw/resources/language/resource.language.bs_ba/: strings.po
imagedecoder.raw/resources/language/resource.language.ca_es/: strings.po
imagedecoder.raw/resources/language/resource.language.cs_cz/: strings.po
imagedecoder.raw/resources/language/resource.language.cy_gb/: strings.po
imagedecoder.raw/resources/language/resource.language.da_dk/: strings.po
imagedecoder.raw/resources/language/resource.language.de_de/: strings.po
imagedecoder.raw/resources/language/resource.language.el_gr/: strings.po
imagedecoder.raw/resources/language/resource.language.en_au/: strings.po
imagedecoder.raw/resources/language/resource.language.en_gb/: strings.po
imagedecoder.raw/resources/language/resource.language.en_nz/: strings.po
imagedecoder.raw/resources/language/resource.language.en_us/: strings.po
imagedecoder.raw/resources/language/resource.language.eo/: strings.po
imagedecoder.raw/resources/language/resource.language.es_ar/: strings.po
imagedecoder.raw/resources/language/resource.language.es_es/: strings.po
imagedecoder.raw/resources/language/resource.language.es_mx/: strings.po
imagedecoder.raw/resources/language/resource.language.et_ee/: strings.po
imagedecoder.raw/resources/language/resource.language.eu_es/: strings.po
imagedecoder.raw/resources/language/resource.language.fa_af/: strings.po
imagedecoder.raw/resources/language/resource.language.fa_ir/: strings.po
imagedecoder.raw/resources/language/resource.language.fi_fi/: strings.po
imagedecoder.raw/resources/language/resource.language.fo_fo/: strings.po
imagedecoder.raw/resources/language/resource.language.fr_ca/: strings.po
imagedecoder.raw/resources/language/resource.language.fr_fr/: strings.po
imagedecoder.raw/resources/language/resource.language.gl_es/: strings.po
imagedecoder.raw/resources/language/resource.language.he_il/: strings.po
imagedecoder.raw/resources/language/resource.language.hi_in/: strings.po
imagedecoder.raw/resources/language/resource.language.hr_hr/: strings.po
imagedecoder.raw/resources/language/resource.language.hu_hu/: strings.po
imagedecoder.raw/resources/language/resource.language.hy_am/: strings.po
imagedecoder.raw/resources/language/resource.language.id_id/: strings.po
imagedecoder.raw/resources/language/resource.language.is_is/: strings.po
imagedecoder.raw/resources/language/resource.language.it_it/: strings.po
imagedecoder.raw/resources/language/resource.language.ja_jp/: strings.po
imagedecoder.raw/resources/language/resource.language.kl_gl/: strings.po
imagedecoder.raw/resources/language/resource.language.kn_in/: strings.po
imagedecoder.raw/resources/language/resource.language.ko_kr/: strings.po
imagedecoder.raw/resources/language/resource.language.lt_lt/: strings.po
imagedecoder.raw/resources/language/resource.language.lv_lv/: strings.po
imagedecoder.raw/resources/language/resource.language.mi/: strings.po
imagedecoder.raw/resources/language/resource.language.mk_mk/: strings.po
imagedecoder.raw/resources/language/resource.language.ml_in/: strings.po
imagedecoder.raw/resources/language/resource.language.mn_mn/: strings.po
imagedecoder.raw/resources/language/resource.language.ms_my/: strings.po
imagedecoder.raw/resources/language/resource.language.mt_mt/: strings.po
imagedecoder.raw/resources/language/resource.language.my_mm/: strings.po
imagedecoder.raw/resources/language/resource.language.nb_no/: strings.po
imagedecoder.raw/resources/language/resource.language.nl_nl/: strings.po
imagedecoder.raw/resources/language/resource.language.os_os/: strings.po
imagedecoder.raw/resources/language/resource.language.pl_pl/: strings.po
imagedecoder.raw/resources/language/resource.language.pt_br/: strings.po
imagedecoder.raw/resources/language/resource.language.pt_pt/: strings.po
imagedecoder.raw/resources/language/resource.language.ro_md/: strings.po
imagedecoder.raw/resources/language/resource.language.ro_ro/: strings.po
imagedecoder.raw/resources/language/resource.language.ru_ru/: strings.po
src/: RawPicture.cpp  RawPicture.h
(+19 files in other folders)
