cmake_minimum_required(VERSION 3.5)
project(libjpeg-turbo)

include(CheckSymbolExists)
check_symbol_exists(_X86_ "Windows.h" _X86_)
check_symbol_exists(_AMD64_ "Windows.h" _X64_)
check_symbol_exists(_ARM_ "Windows.h" _ARM_)
check_symbol_exists(_ARM64_ "Windows.h" _ARM64_)

if(_X86_)
  set(TARGET_ARCH win32)
elseif(_X64_)
  set(TARGET_ARCH x64)
elseif(_ARM_)
  set(TARGET_ARCH arm)
elseif(_ARM64_)
  set(TARGET_ARCH arm64)
else()
  message(FATAL_ERROR "Unsupported architecture")
endif()

set(JPEG_TURBO_ARCHIVE_NAME libjpeg-turbo-2.0.3-win10-${TARGET_ARCH}-v141-20200105)

message(STATUS "Downloading http://mirrors.kodi.tv/build-deps/win32/${JPEG_TURBO_ARCHIVE_NAME}.7z")
file(DOWNLOAD http://mirrors.kodi.tv/build-deps/win32/${JPEG_TURBO_ARCHIVE_NAME}.7z ${CMAKE_CURRENT_BINARY_DIR}/${JPEG_TURBO_ARCHIVE_NAME}.7z SHOW_PROGRESS)
execute_process(COMMAND ${CMAKE_COMMAND} -E tar xzvf ${JPEG_TURBO_ARCHIVE_NAME}.7z WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${JPEG_TURBO_ARCHIVE_NAME}/ DESTINATION ${CMAKE_INSTALL_PREFIX})
